[gd_scene load_steps=2 format=3 uid="uid://dhqixvf2cxxxx"]

[ext_resource type="Script" path="res://scripts/ui/debug_panel.gd" id="1_uwpdp"]

[node name="DebugPanel" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 400.0
grow_horizontal = 0
script = ExtResource("1_uwpdp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Debug Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Debug Mode (Master Toggle)"

[node name="PanelToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Show Debug Panel"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SeedManagerToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Seed Manager Debug"

[node name="WorldGeneratorToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "World Generator Debug"

[node name="EntityGenerationToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Entity Generation Debug"

[node name="PhysicsToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Physics Debug"

[node name="UIToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "UI Debug"

[node name="ComponentsToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Components Debug"

[node name="LoggingToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Detailed Logging"

[node name="GridToggle" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Draw Debug Grid"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ToggleAllButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle All"

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3